PSC-510 refactor to properly use multitenant options and unit tests.
